# pkg/models/web_request.go
@@ -1,0 +1,10 @@
+package models
+
+type RegisterRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type LoginRequest struct {
+	RegisterRequest
+}
